--- a/test/ruby/Rakefile
+++ b/test/ruby/Rakefile
@@ -1,5 +1,7 @@
 require 'rake/testtask'
 
+task :default => [:test]
+
 Rake::TestTask.new do |t|
   t.libs << "../../libexec"
   t.test_files = FileList['*.rb']
